feat: displaying api service

--- a/api/rest/pom.xml
+++ b/api/rest/pom.xml
@@ -23,6 +23,11 @@
             <scope>provided</scope>
         </dependency>-->
         <dependency>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>resteasy-servlet-initializer</artifactId>
+            <version>3.0.16.Final</version>
+        </dependency>
+        <dependency>
             <groupId>jakarta.platform</groupId>
             <artifactId>jakarta.jakartaee-web-api</artifactId>
             <version>8.0.0</version>
