--- a/api/product_order-api-rest/pom.xml
+++ b/api/product_order-api-rest/pom.xml
@@ -51,6 +51,12 @@
             <version>1.0.1</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.bisa.product_order</groupId>
+            <artifactId>product_order-runtime-api</artifactId>
+            <version>1.0.1</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
