--- a/product_order-runtime/product_order-runtime-api/pom.xml
+++ b/product_order-runtime/product_order-runtime-api/pom.xml
@@ -26,6 +26,12 @@
             <version>6.0</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.bisa.product_order</groupId>
+            <artifactId>product_order-runtime-impl</artifactId>
+            <version>1.0.1</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
