--- a/product_order-runtime/product_order-runtime-impl/pom.xml
+++ b/product_order-runtime/product_order-runtime-impl/pom.xml
@@ -21,10 +21,22 @@
 
     <dependencies>
         <dependency>
+            <groupId>jakarta.platform</groupId>
+            <artifactId>jakarta.jakartaee-api</artifactId>
+            <version>8.0.0</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
             <version>6.0</version>
             <scope>provided</scope>
+        </dependency>
+       <dependency>
+            <groupId>com.bisa.product_order</groupId>
+            <artifactId>product_order-runtime-serv</artifactId>
+            <version>1.0.1</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
