--- a/product_order-runtime/product_order-runtime-serv/pom.xml
+++ b/product_order-runtime/product_order-runtime-serv/pom.xml
@@ -7,9 +7,26 @@
         <version>1.0.1</version>
     </parent>
     <artifactId>product_order-runtime-serv</artifactId>
+    <version>1.0.1</version>
+    <name>product_order-runtime-serv</name>
     <packaging>jar</packaging>
     <properties>
+        <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>jakarta.platform</groupId>
+            <artifactId>jakarta.jakartaee-web-api</artifactId>
+            <version>8.0.0</version>
+            <scope>provided</scope>            
+        </dependency>
+        <dependency>
+            <groupId>jakarta.ws.rs</groupId>
+            <artifactId>jakarta.ws.rs-api</artifactId>
+            <version>3.0.0</version>
+        </dependency>
+    </dependencies>
+
 </project>
