--- a/product_order-runtime/product_order-runtime-local/pom.xml
+++ b/product_order-runtime/product_order-runtime-local/pom.xml
@@ -12,4 +12,24 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-api</artifactId>
+            <version>6.0</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.bisa.product_order</groupId>
+            <artifactId>pro</artifactId>
+            <version>1.0.1</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.bisa.product_order</groupId>
+            <artifactId>product_order-tools</artifactId>
+            <version>1.0.1</version>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
 </project>
