--- a/product_order-runtime/product_order-runtime-impl/pom.xml
+++ b/product_order-runtime/product_order-runtime-impl/pom.xml
@@ -32,12 +32,30 @@
             <version>6.0</version>
             <scope>provided</scope>
         </dependency>
-       <dependency>
+        <dependency>
             <groupId>com.bisa.product_order</groupId>
             <artifactId>product_order-runtime-serv</artifactId>
             <version>1.0.1</version>
             <scope>compile</scope>
         </dependency>
+       <dependency>
+            <groupId>com.bisa.product_order</groupId>
+            <artifactId>product_order-runtime-local</artifactId>
+            <version>1.0.1</version>
+            <scope>compile</scope>
+        </dependency>
+       <dependency>
+            <groupId>com.bisa.product_order</groupId>
+            <artifactId>product_order-domain</artifactId>
+            <version>1.0.1</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.bisa.product_order</groupId>
+            <artifactId>product_order-tools</artifactId>
+            <version>1.0.1</version>
+            <scope>provided</scope>
+        </dependency> 
     </dependencies>
 
     <build>
@@ -45,10 +63,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
+                <version>3.10.1</version>
                 <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                     <compilerArguments>
                         <endorseddirs>${endorsed.dir}</endorseddirs>
                     </compilerArguments>
