--- a/product_order-runtime/product_order-runtime-serv/pom.xml
+++ b/product_order-runtime/product_order-runtime-serv/pom.xml
@@ -27,6 +27,12 @@
             <artifactId>jakarta.ws.rs-api</artifactId>
             <version>3.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.bisa.product_order</groupId>
+            <artifactId>product_order-tools</artifactId>
+            <version>1.0.1</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
 </project>
